--- a/tugas_Kelompok_4.ipynb
+++ b/tugas_Kelompok_4.ipynb
@@ -14,6 +14,7 @@
         "2. Andhika Rivai\n",
         "3. Ahmad Raffi Alhadipuro\n",
         "4. Achmad Bimo Mulyo\n",
+        "5. Muhammad Rizky Baidlowi\n",
         "\n",
         "\n"
       ]
